--- a/app/src/main/res/layout/model_characters.xml
+++ b/app/src/main/res/layout/model_characters.xml
@@ -1,40 +1,46 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginHorizontal="24dp"
     android:layout_marginBottom="12dp"
     android:background="@drawable/cr15dp"
-    android:orientation="horizontal">
+    android:padding="12dp">
 
     <ImageView
         android:id="@+id/characters_model_logo"
         android:layout_width="116dp"
         android:layout_height="116dp"
-        android:layout_margin="12dp"
-        android:src="@mipmap/tartalia" />
+        android:src="@mipmap/tartalia"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_margin="12dp"
-        android:orientation="vertical">
+    <TextView
+        android:id="@+id/model_characters_title"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="12dp"
+        android:textSize="16sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/characters_model_logo"
+        app:layout_constraintTop_toTopOf="parent" />
 
-        <TextView
-            android:id="@+id/model_characters_title"
-            style="@style/TextView.WrapContent16sp" />
+    <TextView
+        android:id="@+id/model_characters_star"
+        android:layout_height="wrap_content"
+        android:layout_width="wrap_content"
+        android:layout_marginStart="12dp"
+        app:layout_constraintStart_toEndOf="@+id/characters_model_logo"
+        app:layout_constraintTop_toBottomOf="@+id/model_characters_title" />
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+    <ImageView
+        style="@style/Star"
+        app:layout_constraintStart_toEndOf="@+id/model_characters_star"
+        app:layout_constraintTop_toBottomOf="@+id/model_characters_title" />
 
-            <TextView
-                android:id="@+id/model_characters_star"
-                style="@style/TextView.WrapContent16sp" />
 
-            <ImageView style="@style/Star" />
-        </LinearLayout>
-
-    </LinearLayout>
-
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
