--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -24,17 +24,27 @@
 
         <EditText
             android:id="@+id/username"
-            style="@style/EditText"
+            android:background="@drawable/edit_text_border"
+            android:textColorHint="#AFAFAF"
+            android:layout_height="50dp"
+            android:layout_width="match_parent"
+            android:paddingHorizontal="8dp"
+            android:textSize="18sp"
+            android:fontFamily="@font/roboto"
             android:hint="@string/username"
             android:lines="1"
-            android:fontFamily="@font/roboto"
             android:singleLine="true" />
 
         <EditText
             android:id="@+id/password"
-            style="@style/EditText"
             android:layout_below="@+id/username"
+            android:background="@drawable/edit_text_border"
             android:layout_marginTop="24dp"
+            android:textColorHint="#AFAFAF"
+            android:layout_height="50dp"
+            android:layout_width="match_parent"
+            android:paddingHorizontal="8dp"
+            android:textSize="18sp"
             android:fontFamily="@font/roboto"
             android:hint="@string/password"
             android:inputType="textPassword" />
