--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,30 +6,6 @@
         <item name="android:textColor">?android:textColor</item>
     </style>
 
-    <style name="TextView.MatchParent22sp">
-        <item name="android:layout_width">match_parent</item>
-        <item name="android:layout_height">wrap_content</item>
-        <item name="android:textSize">22sp</item>
-    </style>
-
-    <style name="TextView.WrapContent22sp">
-        <item name="android:layout_width">wrap_content</item>
-        <item name="android:layout_height">wrap_content</item>
-        <item name="android:textSize">22sp</item>
-    </style>
-
-    <style name="TextView.MatchParent16sp">
-        <item name="android:layout_width">match_parent</item>
-        <item name="android:layout_height">wrap_content</item>
-        <item name="android:textSize">16sp</item>
-    </style>
-
-    <style name="TextView.WrapContent16sp">
-        <item name="android:layout_width">wrap_content</item>
-        <item name="android:layout_height">wrap_content</item>
-        <item name="android:textSize">16sp</item>
-    </style>
-
     <style name="NavigationBarButton">
         <item name="android:layout_height">64dp</item>
         <item name="android:layout_width">64dp</item>
@@ -55,34 +31,15 @@
     </style>
 
     <style name="EditText" parent="Widget.AppCompat.EditText">
-        <item name="android:layout_width">match_parent</item>
-        <item name="android:layout_height">50dp</item>
-        <item name="android:textSize">18sp</item>
-        <item name="android:textColorHint">#AFAFAF</item>
-        <item name="android:background">@drawable/edit_text_border</item>
-        <item name="fontFamily">@font/roboto</item>
-        <item name="android:paddingLeft">8dp</item>
-        <item name="android:paddingRight">8dp</item>
+        <item name="android:textSize">16sp</item>
         <item name="android:singleLine">true</item>
-    </style>
-
-    <style name="TextView.MatchParent16sp.EditText">
-        <item name="android:padding">0dp</item>
-        <item name="android:backgroundTint">#0000</item>
-        <item name="android:enabled">false</item>
+        <item name="android:backgroundTint">@android:color/transparent</item>
         <item name="android:inputType">none</item>
-        <item name="android:singleLine">true</item>
-    </style>
-
-    <style name="TextView.MatchParent22sp.EditText">
-        <item name="android:padding">0dp</item>
-        <item name="android:backgroundTint">#0000</item>
         <item name="android:enabled">false</item>
-        <item name="android:inputType">none</item>
-        <item name="android:singleLine">true</item>
+        <item name="android:textColor">?android:textColorPrimary</item>
     </style>
 
-    <style name="TextView.WrapContent16sp.EditText">
+    <style name="TextView.EditText">
         <item name="android:padding">0dp</item>
         <item name="android:backgroundTint">#0000</item>
         <item name="android:enabled">false</item>
