--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -19,6 +19,7 @@
 		<item name="android:windowBackground">@drawable/bg_activity</item>
 		<item name="android:textViewStyle">@style/TextView</item>
 		<item name="android:navigationBarColor">?android:colorBackground</item>
+		<item name="android:textColorPrimary">?android:colorBackground</item>
 		<item name="colorPrimary">#4F46E5</item>
 		<item name="colorOnSecondary">#FFF</item>
 	</style>
@@ -35,6 +36,7 @@
 		<item name="colorOnPrimary">#FFF</item>
 		<!--    текст    -->
 		<item name="android:textColor">#000</item>
+		<item name="android:textColorPrimary">#000</item>
 <!--		<item name="alertDialogTheme">@style/Dialog.Light</item>-->
 		<item name="materialAlertDialogTheme">@style/Dialog.Light</item>
 	</style>
@@ -46,6 +48,7 @@
 		<item name="colorOnPrimary">#FFF</item>
 <!--		<item name="colorPrimary">#374151</item>-->
 		<item name="android:textColor">#FFF</item>
+		<item name="android:textColorPrimary">#FFF</item>
 		<item name="alertDialogTheme">@style/Dialog.Dark</item>
 		<item name="materialAlertDialogTheme">@style/Dialog.Dark</item>
 	</style>
