--- a/app/src/main/res/layout/fragment_about.xml
+++ b/app/src/main/res/layout/fragment_about.xml
@@ -1,22 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/fragment_about"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:scrollbars="none"
     tools:context=".fragments.AboutFragment">
 
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:scrollbars="none">
-
-        <RelativeLayout
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
             android:paddingHorizontal="24dp">
 
             <ImageView
@@ -25,7 +19,10 @@
                 android:layout_height="350dp"
                 android:layout_alignParentTop="true"
                 android:layout_marginTop="50dp"
-                android:src="@mipmap/about" />
+                android:src="@mipmap/about"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/project"
@@ -33,9 +30,11 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/paimon"
                 android:layout_marginVertical="12dp"
-                android:layout_marginTop="166dp"
                 android:background="@drawable/cr15dp"
-                android:padding="24dp">
+                android:padding="24dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/paimon">
 
                 <TextView
                     android:id="@+id/about_project"
@@ -63,14 +62,13 @@
             <TextView
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/project"
                 android:text="@string/rights"
                 android:textAlignment="center"
                 android:textColor="@color/text_description"
-                android:textSize="13sp" />
+                android:textSize="13sp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/project" />
 
-        </RelativeLayout>
-
-    </ScrollView>
-
-</RelativeLayout>
+        </androidx.constraintlayout.widget.ConstraintLayout>
+</ScrollView>
