--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/fragment_login"
     android:layout_width="match_parent"
@@ -12,55 +13,72 @@
         android:id="@+id/logo"
         android:layout_width="match_parent"
         android:layout_height="250dp"
-        android:src="@drawable/ic_logo" />
+        android:src="@drawable/ic_logo"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
-    <RelativeLayout
-        android:layout_width="match_parent"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/form"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_below="@+id/logo"
         android:layout_marginVertical="12dp"
         android:background="@drawable/cr15dp"
-        android:padding="24dp">
+        android:padding="24dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.563"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/logo">
 
         <EditText
             android:id="@+id/username"
-            android:background="@drawable/edit_text_border"
-            android:textColorHint="#AFAFAF"
-            android:layout_height="50dp"
             android:layout_width="match_parent"
-            android:paddingHorizontal="8dp"
-            android:textSize="18sp"
+            android:layout_height="50dp"
+            android:layout_marginBottom="24dp"
+            android:background="@drawable/edit_text_border"
             android:fontFamily="@font/roboto"
             android:hint="@string/username"
             android:lines="1"
-            android:singleLine="true" />
+            android:paddingHorizontal="8dp"
+            android:singleLine="true"
+            android:textColorHint="#AFAFAF"
+            android:textSize="18sp"
+            app:layout_constraintBottom_toTopOf="@+id/password"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
 
         <EditText
             android:id="@+id/password"
-            android:layout_below="@+id/username"
-            android:background="@drawable/edit_text_border"
-            android:layout_marginTop="24dp"
-            android:textColorHint="#AFAFAF"
-            android:layout_height="50dp"
             android:layout_width="match_parent"
-            android:paddingHorizontal="8dp"
-            android:textSize="18sp"
+            android:layout_height="50dp"
+            android:layout_below="@+id/username"
+            android:layout_marginBottom="24dp"
+            android:background="@drawable/edit_text_border"
             android:fontFamily="@font/roboto"
             android:hint="@string/password"
-            android:inputType="textPassword" />
+            android:inputType="textPassword"
+            android:paddingHorizontal="8dp"
+            android:textColorHint="#AFAFAF"
+            android:textSize="18sp"
+            app:layout_constraintBottom_toTopOf="@+id/login"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.666"
+            app:layout_constraintStart_toStartOf="parent" />
 
         <Button
             android:id="@+id/login"
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:layout_below="@+id/password"
-            android:layout_marginTop="24dp"
-            android:layout_marginEnd="0dp"
             android:background="@drawable/cr10dp"
             android:text="@string/login"
             android:textAllCaps="false"
-            android:textColor="#FFF" />
+            android:textColor="#FFF"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
 
-    </RelativeLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
-</RelativeLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
