--- a/app/src/main/res/layout/item_characters.xml
+++ b/app/src/main/res/layout/item_characters.xml
@@ -39,16 +39,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="12dp"
+            app:drawableEndCompat="@drawable/ic_star"
             app:layout_constraintStart_toEndOf="@+id/icon"
             app:layout_constraintTop_toBottomOf="@+id/title"
             tools:text="Title" />
-
-        <ImageView
-            android:layout_width="23sp"
-            android:layout_height="23sp"
-            android:src="@drawable/ic_star"
-            app:layout_constraintStart_toEndOf="@+id/star"
-            app:layout_constraintTop_toBottomOf="@+id/title" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
