--- a/app/src/main/res/layout/fragment_dictionary.xml
+++ b/app/src/main/res/layout/fragment_dictionary.xml
@@ -1,14 +1,84 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/fragment_characters"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".dictionary.DictionaryFragment">
+    tools:context=".dictionary.ui.DictionaryFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <!--<TextView
+        android:id="@+id/error"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        tools:text="Не удалось найти ни одного персонажа"
+        android:textAlignment="center"
+        android:visibility="gone" />
+
+    <ProgressBar
+        android:id="@+id/progress"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:indeterminateTint="?colorPrimary"
+        android:visibility="gone" />-->
+
+    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+        android:id="@+id/refresh"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="Dictionary" />
+        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
+        app:layout_scrollFlags="scroll|enterAlways">
 
-</FrameLayout>
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recycler"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+
+    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
+
+    <!--<com.google.android.material.appbar.AppBarLayout
+        android:id="@+id/appbar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@null"
+        android:clipToPadding="false"
+        android:paddingHorizontal="24dp"
+        android:stateListAnimator="@null">
+
+        <FrameLayout
+            android:id="@+id/toolbar_card"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:layout_marginVertical="8dp"
+            android:background="@null"
+            app:layout_scrollFlags="scroll|enterAlways">
+
+            <com.google.android.material.appbar.MaterialToolbar
+                android:id="@+id/toolbar"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@null"
+                android:focusable="true"
+                android:focusableInTouchMode="true"
+                app:contentInsetStartWithNavigation="0dp">
+
+                <Button
+                    android:id="@+id/sort"
+                    style="@style/Button"
+                    android:layout_width="match_parent"
+                    android:layout_height="40dp"
+                    android:layout_gravity="center"
+                    android:layout_marginEnd="24dp"
+                    android:drawableEnd="@drawable/ic_more"
+                    android:drawableTint="@android:color/white"
+                    android:text="@string/sorting" />
+
+            </com.google.android.material.appbar.MaterialToolbar>
+
+        </FrameLayout>
+
+    </com.google.android.material.appbar.AppBarLayout>-->
+
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
