--- a/app/src/main/res/layout/fragment_dictionary.xml
+++ b/app/src/main/res/layout/fragment_dictionary.xml
@@ -7,6 +7,8 @@
     android:layout_height="match_parent"
     tools:context=".dictionary.ui.DictionaryFragment">
 
+    <!--    TODO add plug-->
+
     <!--<TextView
         android:id="@+id/error"
         android:layout_width="wrap_content"
@@ -38,7 +40,7 @@
 
     </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
-    <!--<com.google.android.material.appbar.AppBarLayout
+    <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/appbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -79,6 +81,6 @@
 
         </FrameLayout>
 
-    </com.google.android.material.appbar.AppBarLayout>-->
+    </com.google.android.material.appbar.AppBarLayout>
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
